# a-2_isaac

./: .gitignore  README.md  list_to_fix.md
isaac_ai/: 03_isaac_ai_README.md  package.xml  setup.cfg  setup.py
isaac_ai/config/: ai.yaml
isaac_ai/isaac_ai/: __init__.py  driving_policy_node.py  object_pose_node.py  perception_node.py  rl_policy_node.py  rl_trainer.py  vision_ai_node.py
isaac_ai/isaac_ai/rl/: __init__.py  driving_policy.py  policy_loader.py  rl_environment.py
isaac_ai/isaac_ai/vision/: depth_estimator.py  mineral_detector.py  obstacle_detector.py  terrain_analyzer.py
isaac_interfaces/: 06_isaac_interfaces_README.md  CMakeLists.txt  package.xml
isaac_interfaces/action/: ExecuteArmTask.action  ExecutePrimitive.action  NavigateTask.action
isaac_interfaces/msg/: BatteryState.msg  DetectedObject.msg  Detection.msg  MissionState.msg  PerceptionResult.msg  RlState.msg  SelectedAction.msg  SelectedDriveAction.msg
isaac_interfaces/srv/: CheckSystemReady.srv  ResetSimulation.srv  SaveExplorationMap.srv  ValidateTask.srv
isaac_launch/: package.xml  setup.py
isaac_launch/config/: pipeline.yaml
isaac_localization/: 09_isaac_localization_README.md  package.xml  setup.cfg  setup.py
isaac_localization/isaac_localization/: ekf_fusion.py  localization_node.py  terrain_map_publisher.py  trn.py
isaac_localization/isaac_localization/sensors/: imu_integrator.py  joint_state_splitter.py  local_height_patch.py  sun_yaw.py  wheel_odom.py
isaac_manipulation/: 08_isaac_manipulation_README.md  package.xml  setup.cfg  setup.py
isaac_manipulation/isaac_manipulation/: arm_executor_node.py  kinematics.py
isaac_manipulation/isaac_manipulation/primitives/: deploy_solar_panel.py  place_to_cargo.py  unload_to_base.py
isaac_manipulation/scripts/: build_rover_m0609_scene.py  find_home_pose.py  pickplace_visual_rover.py  pickup_demo.py  view_wrist_cam.py  view_wrist_cam_posx.py  viewer_process.py  vision_tracker_cyan.py
isaac_nodes/: 05_isaac_nodes_README.md  package.xml  setup.cfg  setup.py
isaac_nodes/config/: nodes.yaml
isaac_nodes/isaac_nodes/: __init__.py  arm_executor_node.py  battery_monitor_node.py  logger_node.py  mission_manager_node.py  robot_executor_node.py  state_collector_node.py  task_manager_node.py
isaac_nodes/isaac_nodes/manipulation_primitives/: pick_mineral.py
isaac_nodes/motion_primitives/: move_home.py  move_to_object.py  move_to_target.py  pick_object.py  place_object.py
isaac_sim/: 02_isaac_sim_README.md  package.xml  setup.py
isaac_sim/assets/: bunker.usd  command_center.usd
isaac_sim/assets/Western_Stylised_Rock/: scene.usdc
isaac_sim/assets/base_camp/: Command_Center.usd  scene.usdc
isaac_sim/assets/doosan-robot2/urdf/: m0609.blue.urdf  m0609.urdf  m0609.white.urdf
isaac_sim/assets/epic_obstacles/: README.md
isaac_sim/assets/epic_obstacles/barracks_starcraft2/: obstacle.usd  scene.usd
isaac_sim/assets/epic_obstacles/battlecruiser_starcraft2/: obstacle.usd  scene.usd
isaac_sim/assets/epic_obstacles/goliath_blackops/: obstacle.usd  scene.usd
isaac_sim/assets/generated_terrains/: index.json
isaac_sim/assets/markers/: basecamp_dome.usd  make_mineral_variants.py  mineral_blue.usd  mineral_red.usd  mineral_yellow.usd
isaac_sim/assets/minerals/: mineral.usd  mineral.usdc
isaac_sim/assets/rover_v2/: isaac_ros_topics.md  rover_m0609_localization.usd
isaac_sim/assets/vehicle/: README.md  vehicle_v2_scene.usd  vehicle_v3.usd
isaac_sim/config/: simulation.yaml
isaac_sim/controllers/: rover_controller.py
isaac_sim/isaac_sim/: sim_bridge_node.py
isaac_sim/launch/: simulation.launch.py
isaac_sim/scripts/: bake_m0609_home.py  base_generator.py  basecamp_visual_builder.py  batch_generate.py  build_integrated_vehicle.py  build_vehicle_v2.py  build_vehicle_v3.py  camera_lighting.py  check_vehicle_v2_topics.py  load_terrain_webcontroller.py  mars_exploration_map_generator.py  mars_material_config.py  mars_material_system.py  mars_physics_config.py  mars_random_generate.py  mars_terrain_generator_v2.py  mars_terrain_generator_v3.py  mars_terrain_generator_v4.py  mars_terrain_generator_v5.py  material_generator.py  mineral_generator.py  patch_terrain_collision.py  procedural_terrain_generator.py  run_vehicle_v2_scene.py  run_vehicle_v3.py  run_vehicle_v4_test.py  save_utils.py  scene_builder.py  teleop_rover_keyboard.py  terrain_generator.py  test_grip_unit.py  world_composer.py
isaac_sim/scripts/legacy/: README.md  localize_d455.py  mars_terrain_generator_v2.py
isaac_sim/web_controller/: REPORT.md  SESSION_REPORT_20260524.md  cert.pem  cleanup_and_launch.sh  key.pem  launch_web_controller.sh  main.py
isaac_sim/web_controller/static/: index.html
isaac_sim/worlds/: mars_exploration_world.usd  terrain_00001.usd  terrain_00002.usd  terrain_00003.usd  terrain_00004.usd  terrain_00005.usd  terrain_00006.usd  terrain_00007.usd  terrain_00008.usd  terrain_00009.usd  terrain_00010.usd  terrain_00011.usd  terrain_00012.usd  terrain_00013.usd  terrain_00014.usd  terrain_00015.usd  terrain_00016.usd  terrain_00017.usd  terrain_00018.usd  terrain_00019.usd  terrain_00020.usd  terrain_00021.usd  terrain_00022.usd  terrain_00023.usd  terrain_00024.usd  terrain_00025.usd  terrain_00026.usd  terrain_00027.usd  terrain_00028.usd  terrain_00029.usd  terrain_00030.usd
isaac_supervisor/: isaac_supervisor_README.md  package.xml  setup.cfg  setup.py
isaac_supervisor/isaac_supervisor/: battery_monitor_node.py  mission_manager_node.py  mission_web_node.py
isaac_supervisor/web/templates/: index.html
isaac_ws/src/isaac_interfaces/: CMakeLists.txt
src/isaac_bringup/: package.xml  setup.py
src/isaac_bringup/launch/: full_system.launch.py  navigation.launch.py  sim.launch.py
src/isaac_navigation/: package.xml  setup.py
src/isaac_navigation/isaac_navigation/: __init__.py  manual_control_node.py  map_manager_node.py  mobile_base_executor_node.py  navigation_manager_node.py  obstacle_avoidance_node.py  path_planner_node.py
src/isaac_nodes/: package.xml
src/isaac_nodes/isaac_nodes/: mobile_base_executor_node.py
(+597 files in other folders)
