<?xml version="1.0"?>
<package format="3">
  <name>isaac_interfaces</name>
  <version>0.0.1</version>
  <description>Custom ROS2 messages, services, and actions for the Isaac pipeline.</description>
  <maintainer email="jimjimjinger@users.noreply.github.com">jimjimjinger</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

