<?xml version="1.0"?>
<package format="3">
  <name>isaac_nodes</name>
  <version>0.0.1</version>
  <description>State collection, task management, robot execution, and logging nodes.</description>
  <maintainer email="jimjimjinger@users.noreply.github.com">jimjimjinger</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>isaac_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

