<?xml version="1.0"?>
<package format="3">
  <name>isaac_sim</name>
  <version>0.0.1</version>
  <description>Isaac Sim environment, scene assets, and simulation helpers.</description>
  <maintainer email="jimjimjinger@users.noreply.github.com">jimjimjinger</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

