<?xml version="1.0"?>
<package format="3">
  <name>isaac_bringup</name>
  <version>0.0.1</version>
  <description>Launch package for the Mars rover exploration system.</description>
  <maintainer email="jimjimjinger@users.noreply.github.com">jimjimjinger</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>isaac_ai</exec_depend>
  <exec_depend>isaac_navigation</exec_depend>
  <exec_depend>isaac_nodes</exec_depend>
  <exec_depend>isaac_sim</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
