<?xml version="1.0"?>
<package format="3">
  <name>isaac_navigation</name>
  <version>0.0.1</version>
  <description>Autonomous navigation, path planning, obstacle avoidance, map management, manual control, and rover driving execution.</description>
  <maintainer email="jimjimjinger@users.noreply.github.com">jimjimjinger</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
